--- a/MODULE 1-HTML 5/index.html
+++ b/MODULE 1-HTML 5/index.html
@@ -77,7 +77,7 @@
           <tr>
             <td>
               <img
-                src="/MODULE 1/images/cycling.jpg"
+                src="/MODULE 1-HTML 5/images/cycling.jpg"
                 alt="Cycling event"
                 title="Cycling"
               />
@@ -91,7 +91,7 @@
 
             <td>
               <img
-                src="/MODULE 1/images/drawing.jpg"
+                src="/MODULE 1-HTML 5/images/drawing.jpg"
                 alt="Drawing event"
                 title="Drawing"
               />
@@ -105,7 +105,7 @@
 
             <td>
               <img
-                src="/MODULE 1/images/singing.jpg"
+                src="/MODULE 1-HTML 5/images/singing.jpg"
                 alt="Singing event"
                 title="Singing"
               />
@@ -121,7 +121,7 @@
           <tr>
             <td>
               <img
-                src="/MODULE 1/images/rangoli.jpg"
+                src="/MODULE 1-HTML 5/images/rangoli.jpg"
                 alt="Rangoli event"
                 title="Rangoli"
               />
@@ -135,7 +135,7 @@
 
             <td>
               <img
-                src="/MODULE 1/images/runningForKids.jpg"
+                src="/MODULE 1-HTML 5/images/runningForKids.jpg"
                 alt="Running race for Kids"
                 title="Running race"
               />
@@ -149,7 +149,7 @@
 
             <td>
               <img
-                src="/MODULE 1/images/traditionalDance.jpg"
+                src="/MODULE 1-HTML 5/images/traditionalDance.jpg"
                 alt="Dance event"
                 title="Folk Dance"
               />
